# SiriusDB_tasks

./: CMakeLists.txt
protos/: task1.proto
src/: CMakeLists.txt  client.cpp  server.cpp
